// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputWithPrefixSuffix should add the "block" class name if this prop is true 1`] = `
<div
  className="input-group block"
>
  <div
    className="input-group-addon"
    style={
      Object {
        "width": undefined,
      }
    }
  >
    £
  </div>
  <input />
  <div
    className="input-group-addon"
    style={
      Object {
        "width": undefined,
      }
    }
  >
    %
  </div>
</div>
`;

exports[`InputWithPrefixSuffix should apply class names to appropriate elements 1`] = `
<div
  className="input-group group"
>
  <div
    className="input-group-addon prefix"
    style={
      Object {
        "width": undefined,
      }
    }
  >
    £
  </div>
  <input
    className="input"
  />
  <div
    className="input-group-addon suffix"
    style={
      Object {
        "width": undefined,
      }
    }
  >
    %
  </div>
</div>
`;

exports[`InputWithPrefixSuffix should match snapshot 1`] = `
<div
  className="input-group"
>
  <input />
</div>
`;

exports[`InputWithPrefixSuffix should pass props to the input 1`] = `
<div
  className="input-group"
>
  <div
    className="input-group-addon"
    style={
      Object {
        "width": undefined,
      }
    }
  >
    £
  </div>
  <input
    onChange={[Function]}
    value="Value"
  />
  <div
    className="input-group-addon"
    style={
      Object {
        "width": undefined,
      }
    }
  >
    %
  </div>
</div>
`;
